[package]
edition = "2021"
name = "chardetng-napi"
version = "0.0.0"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
chardetng = "0.1.17"
napi = { version = "2.12.2", default-features = false, features = [ "napi4" ] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
